// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App is correctly loaded 1`] = `
<div
  className="app"
>
  <div
    className="app__result-container"
  >
    <label
      className="app__result"
    />
    <button
      className="app__button"
      onClick={[Function]}
    >
      C
    </button>
  </div>
  <div
    className="app__buttons-container"
  >
    <div
      className="app__number-container "
    >
      <button
        className="app__button"
        disabled={false}
        key="button-number-0"
        onClick={[Function]}
      >
        0
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-1"
        onClick={[Function]}
      >
        1
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-2"
        onClick={[Function]}
      >
        2
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-3"
        onClick={[Function]}
      >
        3
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-4"
        onClick={[Function]}
      >
        4
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-5"
        onClick={[Function]}
      >
        5
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-6"
        onClick={[Function]}
      >
        6
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-7"
        onClick={[Function]}
      >
        7
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-8"
        onClick={[Function]}
      >
        8
      </button>
      <button
        className="app__button"
        disabled={false}
        key="button-number-9"
        onClick={[Function]}
      >
        9
      </button>
      <img
        alt="[=] Equal Experts"
        className="app__logo"
        src="https://www.equalexperts.com/wp-content/themes/equalexperts/assets/logo.svg"
      />
    </div>
    <div
      className="app__operation-container"
    >
      <button
        className="app__button"
        disabled={false}
        onClick={[Function]}
      >
        +
      </button>
      <button
        className="app__button"
        disabled={false}
        onClick={[Function]}
      >
        -
      </button>
      <button
        className="app__button"
        disabled={false}
        onClick={[Function]}
      >
        /
      </button>
      <button
        className="app__button"
        disabled={false}
        onClick={[Function]}
      >
        *
      </button>
      <button
        className="app__button"
        disabled={false}
        onClick={[Function]}
      >
        =
      </button>
    </div>
  </div>
</div>
`;

exports[`shows calculated values 1`] = `
<App>
  <div
    className="app"
  >
    <div
      className="app__result-container"
    >
      <label
        className="app__result"
      >
        One million
      </label>
      <button
        className="app__button"
        onClick={[Function]}
      >
        C
      </button>
    </div>
    <div
      className="app__buttons-container"
    >
      <div
        className="app__number-container "
      >
        <button
          className="app__button"
          disabled={false}
          key="button-number-0"
          onClick={[Function]}
        >
          0
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-1"
          onClick={[Function]}
        >
          1
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-2"
          onClick={[Function]}
        >
          2
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-3"
          onClick={[Function]}
        >
          3
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-4"
          onClick={[Function]}
        >
          4
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-5"
          onClick={[Function]}
        >
          5
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-6"
          onClick={[Function]}
        >
          6
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-7"
          onClick={[Function]}
        >
          7
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-8"
          onClick={[Function]}
        >
          8
        </button>
        <button
          className="app__button"
          disabled={false}
          key="button-number-9"
          onClick={[Function]}
        >
          9
        </button>
        <img
          alt="[=] Equal Experts"
          className="app__logo"
          src="https://www.equalexperts.com/wp-content/themes/equalexperts/assets/logo.svg"
        />
      </div>
      <div
        className="app__operation-container"
      >
        <button
          className="app__button"
          disabled={false}
          onClick={[Function]}
        >
          +
        </button>
        <button
          className="app__button"
          disabled={false}
          onClick={[Function]}
        >
          -
        </button>
        <button
          className="app__button"
          disabled={false}
          onClick={[Function]}
        >
          /
        </button>
        <button
          className="app__button"
          disabled={false}
          onClick={[Function]}
        >
          *
        </button>
        <button
          className="app__button"
          disabled={false}
          onClick={[Function]}
        >
          =
        </button>
      </div>
    </div>
  </div>
</App>
`;

exports[`shows error messages and block inputs 1`] = `
<App>
  <div
    className="app"
  >
    <div
      className="app__result-container"
    >
      <label
        className="app__result"
      >
        Random
      </label>
      <button
        className="app__button"
        onClick={[Function]}
      >
        C
      </button>
    </div>
    <div
      className="app__buttons-container"
    >
      <div
        className="app__number-container app__number-container--disabled"
      >
        <button
          className="app__button"
          disabled={true}
          key="button-number-0"
          onClick={[Function]}
        >
          0
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-1"
          onClick={[Function]}
        >
          1
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-2"
          onClick={[Function]}
        >
          2
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-3"
          onClick={[Function]}
        >
          3
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-4"
          onClick={[Function]}
        >
          4
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-5"
          onClick={[Function]}
        >
          5
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-6"
          onClick={[Function]}
        >
          6
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-7"
          onClick={[Function]}
        >
          7
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-8"
          onClick={[Function]}
        >
          8
        </button>
        <button
          className="app__button"
          disabled={true}
          key="button-number-9"
          onClick={[Function]}
        >
          9
        </button>
        <img
          alt="[=] Equal Experts"
          className="app__logo"
          src="https://www.equalexperts.com/wp-content/themes/equalexperts/assets/logo.svg"
        />
      </div>
      <div
        className="app__operation-container"
      >
        <button
          className="app__button"
          disabled={true}
          onClick={[Function]}
        >
          +
        </button>
        <button
          className="app__button"
          disabled={true}
          onClick={[Function]}
        >
          -
        </button>
        <button
          className="app__button"
          disabled={true}
          onClick={[Function]}
        >
          /
        </button>
        <button
          className="app__button"
          disabled={true}
          onClick={[Function]}
        >
          *
        </button>
        <button
          className="app__button"
          disabled={true}
          onClick={[Function]}
        >
          =
        </button>
      </div>
    </div>
  </div>
</App>
`;
